# team4

./: .gitignore  .gitmodules  README.md  eval $(ssh-agent -s)  eval $(ssh-agent -s).pub  scout_v2.xacro
odom_plot/scripts/: odom_live_plot.py  odom_xy_plot.py
scout_motion/: package.xml  setup.cfg  setup.py
scout_motion/scout_motion/: move_scout.py
src/dataset_worlds/worlds/hospital/: hospital_two_floors.world
src/my_scout_tools/: package.xml  setup.cfg  setup.py
src/my_scout_tools/my_scout_tools/: cmd_vel_node.py
src/scan_merge/: package.xml  setup.cfg  setup.py
src/scan_merge/scan_merge/: scan_merger_node.py  scan_relay_node.py
src/scout_ros2/scout_description/meshes/: rp_lidar.stl
src/scout_ros2/scout_description/urdf/: empty.urdf  scout_v2.urdf  scout_v2.xacro
src/team4_bringup/: package.xml  setup.py
src/team4_bringup/config/: nav2_params.yaml  tags.yaml
src/team4_bringup/launch/: apriltag_floor.launch.py  navigation.launch.py
src/team4_bringup/team4_bringup/: floor_id_from_apriltag.py  map_switcher.py
src/team4_multifloor/team4_maps/maps/: floor1.pgm  floor1.yaml  floor2.pgm  floor2.yaml
src/ugv_gazebo_sim/hunter/hunter2_base/: CMakeLists.txt  package.xml
src/ugv_gazebo_sim/hunter/hunter2_base/launch/: display.launch.py
src/ugv_gazebo_sim/hunter/hunter2_base/urdf/: hunter2_base_gazebo.xacro
src/ugv_gazebo_sim/hunter/hunter2_gazebo/launch/: display.launch.py
src/ugv_gazebo_sim/hunter/hunter2_gazebo/xacro/: hunter2_description.xacro
src/ugv_gazebo_sim/hunter_se/hunter_se_description/: CMakeLists.txt  package.xml
src/ugv_gazebo_sim/hunter_se/hunter_se_description/config/: joint_names_hunter_se_description_2.yaml
src/ugv_gazebo_sim/hunter_se/hunter_se_gazebo/: CMakeLists.txt
src/ugv_gazebo_sim/ranger/ranger_mini/: CMakeLists.txt  package.xml
(+18 files in other folders)
